// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Tests PartieFormulaire > Afficher le bloc 'Mention intégration RECE' 1`] = `
<div
  class="w-1/2"
>
  <div
    class="flex items-end border-0 border-b border-solid border-gris"
  >
    <button
      class="m-0 min-w-0 rounded-md border border-solid px-4 py-2 uppercase transition-colors border-bleu-sombre bg-bleu-sombre text-blanc hover:bg-bleu hover:border-bleu focus:bg-bleu focus:border-bleu focus:outline-none focus-visible:ring-2 focus-visible:ring-bleu focus-visible:ring-offset-2 disabled:bg-bleu-sombre false m-0 h-11 rounded-b-none rounded-t-lg border-b-0 px-4 py-1.5 transition duration-200 ease-in-out [&:not(:first-child)]:border-l-0"
      disabled=""
      title="Mentions"
      type="button"
    >
      Mentions
    </button>
  </div>
  <div
    class="mt-4 flex h-[calc(100vh-16rem)] flex-col overflow-y-auto"
  >
    <div
      class="gap-2 py-4 grid"
    >
      <div
        class="pb-4 text-left"
      >
        <div>
          <div
            class="relative rounded-md border border-solid border-blue-200 bg-white px-5 pb-8 pt-4 shadow-md mx-4"
          >
            <span
              class="absolute -top-4 left-8 bg-white px-2 text-start text-xl font-bold text-bleu-sombre"
            >
              Formule intégration dans RECE
            </span>
            <div
              class="mt-3 bg-slate-400"
            >
              Acte intégré au registre électronique sous la référence
            </div>
          </div>
        </div>
      </div>
      <form
        action="/test"
        data-discover="true"
        method="get"
      >
        <div>
          <div
            class="relative rounded-md border border-solid border-blue-200 bg-white px-5 pb-8 pt-4 shadow-md mx-4"
          >
            <span
              class="absolute -top-4 left-8 bg-white px-2 text-start text-xl font-bold text-bleu-sombre"
            >
              Mention(s) ajoutée(s)
            </span>
            <div
              class="grid gap-2 pt-3"
            >
              <span
                class="text-start text-sm italic"
              >
                Aucune mention ajoutée
              </span>
            </div>
            <div
              aria-atomic="true"
              aria-live="assertive"
              role="log"
              style="position: absolute; width: 1px; height: 1px; margin: -1px; border: 0px; padding: 0px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); clip-path: inset(100%);"
            />
          </div>
        </div>
      </form>
      <div
        class="mt-4"
      >
        <div>
          <div
            class="relative rounded-md border border-solid border-blue-200 bg-white px-5 pb-8 pt-4 shadow-md mx-4"
          >
            <span
              class="absolute -top-4 left-8 bg-white px-2 text-start text-xl font-bold text-bleu-sombre"
            >
              Ajout d'une mention
            </span>
            <form
              action="#"
              class="grid gap-9 px-1 pt-3"
            >
              <div>
                <label
                  class="m-0 mb-1 ml-1 block w-fit text-start transition-colors text-bleu-sombre"
                  for="idTypeMention"
                >
                  Type mention
                </label>
                <div
                  class="MuiAutocomplete-root MuiAutocomplete-hasPopupIcon css-1tlcqt-MuiAutocomplete-root"
                >
                  <div>
                    <input
                      aria-autocomplete="list"
                      aria-expanded="false"
                      autocapitalize="none"
                      autocomplete="off"
                      class="border-1 flex w-[98%] flex-grow rounded border border-solid px-2 py-1 transition-colors read-only:bg-gris-clair focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-opacity-70 border-gris focus-visible:ring-bleu"
                      id=":r2:"
                      placeholder="Recherche..."
                      role="combobox"
                      spellcheck="false"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
    <div
      class="undefined fixed bottom-0 right-0 pr-16 flex gap-4 py-4 undefined"
    />
  </div>
</div>
`;

exports[`Tests PartieFormulaire > Ajouter une mention 'Mariage - en France(marie)' + validation et envoi formulaire 1`] = `
<div
  class="w-1/2"
>
  <div
    class="flex items-end border-0 border-b border-solid border-gris"
  >
    <button
      class="m-0 min-w-0 rounded-md border border-solid px-4 py-2 uppercase transition-colors border-bleu-sombre bg-bleu-sombre text-blanc hover:bg-bleu hover:border-bleu focus:bg-bleu focus:border-bleu focus:outline-none focus-visible:ring-2 focus-visible:ring-bleu focus-visible:ring-offset-2 disabled:bg-bleu-sombre false m-0 h-11 rounded-b-none rounded-t-lg border-b-0 px-4 py-1.5 transition duration-200 ease-in-out [&:not(:first-child)]:border-l-0"
      disabled=""
      title="Mentions"
      type="button"
    >
      Mentions
    </button>
  </div>
  <div
    class="mt-4 flex h-[calc(100vh-16rem)] flex-col overflow-y-auto"
  >
    <div
      class="gap-2 py-4 grid"
    >
      <form
        action="/test"
        data-discover="true"
        method="get"
      >
        <div>
          <div
            class="relative rounded-md border border-solid border-blue-200 bg-white px-5 pb-8 pt-4 shadow-md mx-4"
          >
            <span
              class="absolute -top-4 left-8 bg-white px-2 text-start text-xl font-bold text-bleu-sombre"
            >
              Mention(s) ajoutée(s)
            </span>
            <div
              class="grid gap-2 pt-3"
            >
              <span
                class="text-start text-sm italic"
              >
                Aucune mention ajoutée
              </span>
            </div>
            <div
              aria-atomic="true"
              aria-live="assertive"
              role="log"
              style="position: absolute; width: 1px; height: 1px; margin: -1px; border: 0px; padding: 0px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); clip-path: inset(100%);"
            />
          </div>
        </div>
      </form>
      <div
        class="mt-4"
      >
        <div>
          <div
            class="relative rounded-md border border-solid border-blue-200 bg-white px-5 pb-8 pt-4 shadow-md mx-4"
          >
            <span
              class="absolute -top-4 left-8 bg-white px-2 text-start text-xl font-bold text-bleu-sombre"
            >
              Ajout d'une mention
            </span>
            <form
              action="#"
              class="grid gap-9 px-1 pt-3"
            >
              <div>
                <label
                  class="m-0 mb-1 ml-1 block w-fit text-start transition-colors text-bleu-sombre"
                  for="idTypeMention"
                >
                  Type mention
                </label>
                <div
                  class="MuiAutocomplete-root MuiAutocomplete-hasPopupIcon css-1tlcqt-MuiAutocomplete-root"
                >
                  <div>
                    <input
                      aria-autocomplete="list"
                      aria-expanded="false"
                      autocapitalize="none"
                      autocomplete="off"
                      class="border-1 flex w-[98%] flex-grow rounded border border-solid px-2 py-1 transition-colors read-only:bg-gris-clair focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-opacity-70 border-gris focus-visible:ring-bleu"
                      id=":r1:"
                      placeholder="Recherche..."
                      role="combobox"
                      spellcheck="false"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
    <div
      class="undefined fixed bottom-0 right-0 pr-16 flex gap-4 py-4 undefined"
    />
  </div>
</div>
`;

exports[`Tests PartieFormulaire > Ajouter une mention simple, ajouter une mention liée à l'analyse marginale, modifier le formulaire et vérifier l'appel API 1`] = `
<div
  class="w-1/2"
>
  <div
    class="flex items-end border-0 border-b border-solid border-gris"
  >
    <button
      class="m-0 min-w-0 rounded-md border border-solid px-4 py-2 uppercase transition-colors border-bleu-sombre bg-bleu-sombre text-blanc hover:bg-bleu hover:border-bleu focus:bg-bleu focus:border-bleu focus:outline-none focus-visible:ring-2 focus-visible:ring-bleu focus-visible:ring-offset-2 disabled:bg-bleu-sombre false m-0 h-11 rounded-b-none rounded-t-lg border-b-0 px-4 py-1.5 transition duration-200 ease-in-out [&:not(:first-child)]:border-l-0"
      disabled=""
      title="Mentions"
      type="button"
    >
      Mentions
    </button>
  </div>
  <div
    class="mt-4 flex h-[calc(100vh-16rem)] flex-col overflow-y-auto"
  >
    <div
      class="gap-2 py-4 grid"
    >
      <form
        action="/test"
        data-discover="true"
        method="get"
      >
        <div>
          <div
            class="relative rounded-md border border-solid border-blue-200 bg-white px-5 pb-8 pt-4 shadow-md mx-4"
          >
            <span
              class="absolute -top-4 left-8 bg-white px-2 text-start text-xl font-bold text-bleu-sombre"
            >
              Mention(s) ajoutée(s)
            </span>
            <div
              class="grid gap-2 pt-3"
            >
              <span
                class="text-start text-sm italic"
              >
                Aucune mention ajoutée
              </span>
            </div>
            <div
              aria-atomic="true"
              aria-live="assertive"
              role="log"
              style="position: absolute; width: 1px; height: 1px; margin: -1px; border: 0px; padding: 0px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); clip-path: inset(100%);"
            />
          </div>
        </div>
      </form>
      <div
        class="mt-4"
      >
        <div>
          <div
            class="relative rounded-md border border-solid border-blue-200 bg-white px-5 pb-8 pt-4 shadow-md mx-4"
          >
            <span
              class="absolute -top-4 left-8 bg-white px-2 text-start text-xl font-bold text-bleu-sombre"
            >
              Ajout d'une mention
            </span>
            <form
              action="#"
              class="grid gap-9 px-1 pt-3"
            >
              <div>
                <label
                  class="m-0 mb-1 ml-1 block w-fit text-start transition-colors text-bleu-sombre"
                  for="idTypeMention"
                >
                  Type mention
                </label>
                <div
                  class="MuiAutocomplete-root MuiAutocomplete-hasPopupIcon css-1tlcqt-MuiAutocomplete-root"
                >
                  <div>
                    <input
                      aria-autocomplete="list"
                      aria-expanded="false"
                      autocapitalize="none"
                      autocomplete="off"
                      class="border-1 flex w-[98%] flex-grow rounded border border-solid px-2 py-1 transition-colors read-only:bg-gris-clair focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-opacity-70 border-gris focus-visible:ring-bleu"
                      id=":r0:"
                      placeholder="Recherche..."
                      role="combobox"
                      spellcheck="false"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
    <div
      class="undefined fixed bottom-0 right-0 pr-16 flex gap-4 py-4 undefined"
    />
  </div>
</div>
`;

exports[`Tests PartieFormulaire > Mettre à jour le formulaire d'analyse marginale et s'assurer que l'appel API est correct 1`] = `
<div
  class="w-1/2"
>
  <div
    class="flex items-end border-0 border-b border-solid border-gris"
  >
    <button
      class="m-0 min-w-0 rounded-md border border-solid px-4 py-2 uppercase transition-colors border-bleu-sombre bg-blanc text-bleu-sombre hover:text-bleu hover:border-bleu focus:text-bleu focus:border-bleu focus:outline-none focus-visible:ring-2 focus-visible:ring-bleu focus-visible:ring-offset-2 disabled:border-gris-sombre disabled:bg-gris-sombre disabled:text-blanc m-0 h-10 rounded-b-none rounded-t-lg border-b-0 px-4 py-1.5 transition duration-200 ease-in-out [&:not(:first-child)]:border-l-0"
      title="Analyse Marginale"
      type="button"
    >
      Analyse Marginale
    </button>
  </div>
  <div
    class="mt-4 flex h-[calc(100vh-16rem)] flex-col overflow-y-auto"
  >
    <div
      class="gap-2 py-4 hidden"
    >
      <form
        action="#"
      >
        <div>
          <div
            class="relative rounded-md border border-solid border-blue-200 bg-white px-5 pb-8 pt-4 shadow-md mx-4"
          >
            <div
              class="pb-4 pt-6"
            >
              <div
                class="grid gap-6"
              >
                <div>
                  <div
                    class="relative rounded-md border border-solid border-blue-200 bg-white px-5 pb-8 pt-4 shadow-md"
                  >
                    <span
                      class="absolute -top-4 left-8 bg-white px-2 text-start text-xl font-bold text-bleu-sombre"
                    >
                      Titulaire
                    </span>
                    <div>
                      <div
                        class="grid gap-4"
                      >
                        <div
                          class="flex items-start gap-4"
                        >
                          <div
                            class="flex w-full flex-col text-start"
                          >
                            <label
                              class="m-0 mb-1 ml-1 block w-fit text-start transition-colors text-bleu-sombre"
                              for="titulaires[0].nom"
                            >
                              Nom
                              <span
                                class="ml-1 text-rouge"
                              >
                                *
                              </span>
                            </label>
                            <div
                              class="relative flex rounded-md shadow-sm"
                            >
                              <input
                                class="border-1 flex w-full flex-grow rounded border border-solid px-2 py-1  transition-colors read-only:bg-gris-clair focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-opacity-70 border-gris focus-visible:ring-bleu"
                                id="titulaires[0].nom"
                                name="titulaires[0].nom"
                                value="Nom Titulaire"
                              />
                            </div>
                          </div>
                          <div
                            class="flex flex-nowrap items-center gap-3 pt-8"
                          >
                            <div
                              class=""
                            >
                              <label
                                class="flex w-fit text-start cursor-pointer"
                              >
                                <input
                                  class="cursor-pointer accent-bleu-sombre"
                                  name="titulaires[0].nomSecable"
                                  type="checkbox"
                                  value="false"
                                />
                                <span
                                  class="ml-2 select-none text-nowrap font-semibold text-bleu-sombre"
                                >
                                  Nom sécable
                                </span>
                              </label>
                            </div>
                            <span
                              class="flex h-6 w-6 cursor-help items-center justify-center rounded-full bg-bleu-sombre text-center font-semibold text-blanc"
                              title="Gestion du nom sécable pour la délivrance des extraits"
                            >
                              ?
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="grid grid-cols-2 gap-4"
                    >
                      <div
                        class="flex w-full flex-col text-start  w-full"
                      >
                        <label
                          class="m-0 mb-1 ml-1 block w-fit text-start transition-colors text-bleu-sombre"
                          for="titulaires[0].prenoms.prenom1"
                        >
                          Prénom 1
                        </label>
                        <div
                          class="relative flex rounded-md shadow-sm"
                        >
                          <input
                            class="border-1 flex w-full flex-grow rounded border border-solid px-2 py-1  transition-colors read-only:bg-gris-clair focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-opacity-70 border-gris focus-visible:ring-bleu"
                            id="titulaires[0].prenoms.prenom1"
                            name="titulaires[0].prenoms.prenom1"
                            type="text"
                            value="Prenom 1"
                          />
                        </div>
                      </div>
                      <div
                        class="pt-[1.6rem]"
                      >
                        <button
                          aria-label="Ajouter un prénom"
                          class="m-0 grid w-fit min-w-0 place-content-center rounded p-[.3rem] uppercase transition-colors duration-200 ease-in-out  bg-bleu-sombre text-blanc hover:bg-bleu focus-visible:bg-bleu focus:outline-none focus-visible:ring-2 focus-visible:ring-bleu focus-visible:ring-offset-2 disabled:bg-gris-sombre disabled:cursor-not-allowed"
                          title="Ajouter un prénom"
                          type="button"
                        >
                          <div
                            class="flex items-center gap-4 px-2"
                          >
                            <svg
                              aria-hidden="true"
                              fill="currentColor"
                              height="1em"
                              stroke="currentColor"
                              stroke-width="0"
                              viewBox="0 0 24 24"
                              width="1em"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M0 0h24v24H0z"
                                fill="none"
                              />
                              <path
                                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm5 11h-4v4h-2v-4H7v-2h4V7h2v4h4v2z"
                              />
                            </svg>
                            <span
                              class="font-marianne text-sm font-bold"
                            >
                              Ajouter un prénom
                            </span>
                          </div>
                        </button>
                      </div>
                      <div>
                        <div
                          class="flex w-full flex-col text-start  w-full"
                        >
                          <label
                            class="m-0 mb-1 ml-1 block w-fit text-start transition-colors text-bleu-sombre"
                            for="titulaires[0].prenoms.prenom2"
                          >
                            Prénom 2
                          </label>
                          <div
                            class="relative flex rounded-md shadow-sm"
                          >
                            <input
                              class="border-1 flex w-full flex-grow rounded border border-solid px-2 py-1  transition-colors read-only:bg-gris-clair focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-opacity-70 border-gris focus-visible:ring-bleu"
                              id="titulaires[0].prenoms.prenom2"
                              name="titulaires[0].prenoms.prenom2"
                              value="Prenom 2"
                            />
                            <button
                              aria-label="Supprimer ce prénom"
                              class="m-0 grid w-fit min-w-0 place-content-center rounded p-[.3rem] uppercase transition-colors duration-200 ease-in-out hover:bg-rouge focus-visible:bg-rouge focus:outline-none focus-visible:ring-2 focus-visible:ring-rouge focus-visible:ring-offset-2 disabled:cursor-not-allowed group absolute right-0 h-full rounded-l-none bg-transparent"
                              title="Supprimer ce prénom"
                              type="button"
                            >
                              <svg
                                aria-hidden="true"
                                class="text-rouge group-hover:text-blanc group-focus-visible:text-blanc"
                                fill="currentColor"
                                height="1em"
                                stroke="currentColor"
                                stroke-width="0"
                                viewBox="0 0 24 24"
                                width="1em"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M0 0h24v24H0z"
                                  fill="none"
                                />
                                <path
                                  d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
                                />
                              </svg>
                            </button>
                          </div>
                        </div>
                      </div>
                      <div>
                        <div
                          class="flex w-full flex-col text-start  w-full"
                        >
                          <label
                            class="m-0 mb-1 ml-1 block w-fit text-start transition-colors text-bleu-sombre"
                            for="titulaires[0].prenoms.prenom3"
                          >
                            Prénom 3
                          </label>
                          <div
                            class="relative flex rounded-md shadow-sm"
                          >
                            <input
                              class="border-1 flex w-full flex-grow rounded border border-solid px-2 py-1  transition-colors read-only:bg-gris-clair focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-opacity-70 border-gris focus-visible:ring-bleu"
                              id="titulaires[0].prenoms.prenom3"
                              name="titulaires[0].prenoms.prenom3"
                              value="Prenom 3"
                            />
                            <button
                              aria-label="Supprimer ce prénom"
                              class="m-0 grid w-fit min-w-0 place-content-center rounded p-[.3rem] uppercase transition-colors duration-200 ease-in-out hover:bg-rouge focus-visible:bg-rouge focus:outline-none focus-visible:ring-2 focus-visible:ring-rouge focus-visible:ring-offset-2 disabled:cursor-not-allowed group absolute right-0 h-full rounded-l-none bg-transparent"
                              title="Supprimer ce prénom"
                              type="button"
                            >
                              <svg
                                aria-hidden="true"
                                class="text-rouge group-hover:text-blanc group-focus-visible:text-blanc"
                                fill="currentColor"
                                height="1em"
                                stroke="currentColor"
                                stroke-width="0"
                                viewBox="0 0 24 24"
                                width="1em"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M0 0h24v24H0z"
                                  fill="none"
                                />
                                <path
                                  d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
                                />
                              </svg>
                            </button>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="flex w-full flex-col text-start  champs-motif"
                >
                  <label
                    class="m-0 mb-1 ml-1 block w-fit text-start transition-colors text-bleu-sombre"
                    for="motif"
                  >
                    Motif
                    <span
                      class="ml-1 text-rouge"
                    >
                      *
                    </span>
                  </label>
                  <div
                    class="relative flex rounded-md shadow-sm"
                  >
                    <input
                      class="border-1 flex w-full flex-grow rounded border border-solid px-2 py-1  transition-colors read-only:bg-gris-clair focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-opacity-70 border-gris focus-visible:ring-bleu"
                      id="motif"
                      name="motif"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
                <div
                  class="flex justify-between pt-6"
                >
                  <button
                    class="m-0 min-w-0 rounded-md border border-solid px-4 py-2 uppercase transition-colors border-bleu-sombre bg-bleu-sombre text-blanc hover:bg-bleu hover:border-bleu focus:bg-bleu focus:border-bleu focus:outline-none focus-visible:ring-2 focus-visible:ring-bleu focus-visible:ring-offset-2 disabled:bg-bleu-sombre disabled:border-gris-sombre disabled:bg-gris-sombre disabled:text-blanc"
                    disabled=""
                    type="button"
                  >
                    Annuler la saisie en cours
                  </button>
                  <button
                    class="m-0 min-w-0 rounded-md border border-solid px-4 py-2 uppercase transition-colors border-bleu-sombre bg-bleu-sombre text-blanc hover:bg-bleu hover:border-bleu focus:bg-bleu focus:border-bleu focus:outline-none focus-visible:ring-2 focus-visible:ring-bleu focus-visible:ring-offset-2 disabled:bg-bleu-sombre disabled:border-gris-sombre disabled:bg-gris-sombre disabled:text-blanc"
                    disabled=""
                    type="submit"
                  >
                    Modifier l'analyse marginale
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </form>
    </div>
    <div
      class="undefined fixed bottom-0 right-0 pr-16 flex gap-4 py-4 undefined"
    >
      <button
        class="m-0 min-w-0 rounded-md border border-solid px-4 py-2 uppercase transition-colors border-bleu-sombre bg-bleu-sombre text-blanc hover:bg-bleu hover:border-bleu focus:bg-bleu focus:border-bleu focus:outline-none focus-visible:ring-2 focus-visible:ring-bleu focus-visible:ring-offset-2 disabled:bg-bleu-sombre disabled:border-gris-sombre disabled:bg-gris-sombre disabled:text-blanc"
        title="Valider et terminer"
        type="button"
      >
        Valider et terminer
      </button>
    </div>
  </div>
</div>
`;

exports[`Tests PartieFormulaire > N'affiche pas le bloc 'Mention intégration RECE' quand l'utilisateur ne possède pas le droit MISE_A_JOUR_CREER_DOUBLE_NUMERIQUE 1`] = `
<div
  class="w-1/2"
>
  <div
    class="flex items-end border-0 border-b border-solid border-gris"
  >
    <button
      class="m-0 min-w-0 rounded-md border border-solid px-4 py-2 uppercase transition-colors border-bleu-sombre bg-bleu-sombre text-blanc hover:bg-bleu hover:border-bleu focus:bg-bleu focus:border-bleu focus:outline-none focus-visible:ring-2 focus-visible:ring-bleu focus-visible:ring-offset-2 disabled:bg-bleu-sombre false m-0 h-11 rounded-b-none rounded-t-lg border-b-0 px-4 py-1.5 transition duration-200 ease-in-out [&:not(:first-child)]:border-l-0"
      disabled=""
      title="Mentions"
      type="button"
    >
      Mentions
    </button>
  </div>
  <div
    class="mt-4 flex h-[calc(100vh-16rem)] flex-col overflow-y-auto"
  >
    <div
      class="gap-2 py-4 grid"
    >
      <form
        action="/test"
        data-discover="true"
        method="get"
      >
        <div>
          <div
            class="relative rounded-md border border-solid border-blue-200 bg-white px-5 pb-8 pt-4 shadow-md mx-4"
          >
            <span
              class="absolute -top-4 left-8 bg-white px-2 text-start text-xl font-bold text-bleu-sombre"
            >
              Mention(s) ajoutée(s)
            </span>
            <div
              class="grid gap-2 pt-3"
            >
              <span
                class="text-start text-sm italic"
              >
                Aucune mention ajoutée
              </span>
            </div>
            <div
              aria-atomic="true"
              aria-live="assertive"
              role="log"
              style="position: absolute; width: 1px; height: 1px; margin: -1px; border: 0px; padding: 0px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); clip-path: inset(100%);"
            />
          </div>
        </div>
      </form>
      <div
        class="mt-4"
      >
        <div>
          <div
            class="relative rounded-md border border-solid border-blue-200 bg-white px-5 pb-8 pt-4 shadow-md mx-4"
          >
            <span
              class="absolute -top-4 left-8 bg-white px-2 text-start text-xl font-bold text-bleu-sombre"
            >
              Ajout d'une mention
            </span>
            <form
              action="#"
              class="grid gap-9 px-1 pt-3"
            >
              <div>
                <label
                  class="m-0 mb-1 ml-1 block w-fit text-start transition-colors text-bleu-sombre"
                  for="idTypeMention"
                >
                  Type mention
                </label>
                <div
                  class="MuiAutocomplete-root MuiAutocomplete-hasPopupIcon css-1tlcqt-MuiAutocomplete-root"
                >
                  <div>
                    <input
                      aria-autocomplete="list"
                      aria-expanded="false"
                      autocapitalize="none"
                      autocomplete="off"
                      class="border-1 flex w-[98%] flex-grow rounded border border-solid px-2 py-1 transition-colors read-only:bg-gris-clair focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-opacity-70 border-gris focus-visible:ring-bleu"
                      id=":r3:"
                      placeholder="Recherche..."
                      role="combobox"
                      spellcheck="false"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
    <div
      class="undefined fixed bottom-0 right-0 pr-16 flex gap-4 py-4 undefined"
    />
  </div>
</div>
`;

exports[`Tests PartieFormulaire > N'affiche pas le bloc 'Mention intégration RECE' si l'acte n'est pas éligible integration mentions 1`] = `
<div
  class="w-1/2"
>
  <div
    class="flex items-end border-0 border-b border-solid border-gris"
  >
    <button
      class="m-0 min-w-0 rounded-md border border-solid px-4 py-2 uppercase transition-colors border-bleu-sombre bg-bleu-sombre text-blanc hover:bg-bleu hover:border-bleu focus:bg-bleu focus:border-bleu focus:outline-none focus-visible:ring-2 focus-visible:ring-bleu focus-visible:ring-offset-2 disabled:bg-bleu-sombre false m-0 h-11 rounded-b-none rounded-t-lg border-b-0 px-4 py-1.5 transition duration-200 ease-in-out [&:not(:first-child)]:border-l-0"
      disabled=""
      title="Mentions"
      type="button"
    >
      Mentions
    </button>
  </div>
  <div
    class="mt-4 flex h-[calc(100vh-16rem)] flex-col overflow-y-auto"
  >
    <div
      class="gap-2 py-4 grid"
    >
      <form
        action="/test"
        data-discover="true"
        method="get"
      >
        <div>
          <div
            class="relative rounded-md border border-solid border-blue-200 bg-white px-5 pb-8 pt-4 shadow-md mx-4"
          >
            <span
              class="absolute -top-4 left-8 bg-white px-2 text-start text-xl font-bold text-bleu-sombre"
            >
              Mention(s) ajoutée(s)
            </span>
            <div
              class="grid gap-2 pt-3"
            >
              <span
                class="text-start text-sm italic"
              >
                Aucune mention ajoutée
              </span>
            </div>
            <div
              aria-atomic="true"
              aria-live="assertive"
              role="log"
              style="position: absolute; width: 1px; height: 1px; margin: -1px; border: 0px; padding: 0px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); clip-path: inset(100%);"
            />
          </div>
        </div>
      </form>
      <div
        class="mt-4"
      >
        <div>
          <div
            class="relative rounded-md border border-solid border-blue-200 bg-white px-5 pb-8 pt-4 shadow-md mx-4"
          >
            <span
              class="absolute -top-4 left-8 bg-white px-2 text-start text-xl font-bold text-bleu-sombre"
            >
              Ajout d'une mention
            </span>
            <form
              action="#"
              class="grid gap-9 px-1 pt-3"
            >
              <div>
                <label
                  class="m-0 mb-1 ml-1 block w-fit text-start transition-colors text-bleu-sombre"
                  for="idTypeMention"
                >
                  Type mention
                </label>
                <div
                  class="MuiAutocomplete-root MuiAutocomplete-hasPopupIcon css-1tlcqt-MuiAutocomplete-root"
                >
                  <div>
                    <input
                      aria-autocomplete="list"
                      aria-expanded="false"
                      autocapitalize="none"
                      autocomplete="off"
                      class="border-1 flex w-[98%] flex-grow rounded border border-solid px-2 py-1 transition-colors read-only:bg-gris-clair focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-opacity-70 border-gris focus-visible:ring-bleu"
                      id=":r4:"
                      placeholder="Recherche..."
                      role="combobox"
                      spellcheck="false"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
    <div
      class="undefined fixed bottom-0 right-0 pr-16 flex gap-4 py-4 undefined"
    />
  </div>
</div>
`;

exports[`Tests PartieFormulaire > S'assurer que l'appel API de recuperation d'acte est correct avec data titulaires vide  1`] = `
<h2>
  Unexpected Application Error!
</h2>
`;
